# $Id: Makefile.am,v 1.3 2010/09/06 22:35:17 grooverdan Exp $

AM_CFLAGS = $(COV_CFLAGS) $(LIBCRYPTO_CFLAGS)
AM_LDFLAGS = $(COV_LDFLAGS) $(LIBCRYPTO_LDFLAGS)
AM_CPPFLAGS = $(LIBCRYPTO_CPPFLAGS)

if DEBUG
AM_CFLAGS += -g
endif

if USE_ARLIB
AM_CFLAGS += $(PTHREAD_CFLAGS)
AM_LDFLAGS += $(PTHREAD_CFLAGS)
endif

LDADD = ../libdkimrep.la $(COV_LIBADD) $(LIBRESOLV) $(LIBCRYPTO_LIBS)
AM_CPPFLAGS += -I..

check_PROGRAMS = dr_test00

TESTS = $(check_PROGRAMS)

dr_test00_SOURCES = dr-test00.c

MOSTLYCLEANFILES=
