
AM_CFLAGS = $(COV_CFLAGS) $(LIBCRYPTO_CFLAGS)
AM_LDFLAGS = $(COV_LDFLAGS) $(LIBCRYPTO_LDFLAGS)
AM_CPPFLAGS = $(LIBCRYPTO_CPPFLAGS)

if DEBUG
AM_CFLAGS += -g
endif

LDADD = ../libdkimrep.la $(COV_LIBADD) $(LIBRESOLV) $(LIBCRYPTO_LIBS)
AM_CPPFLAGS += -I..

check_PROGRAMS = dr_test00

TESTS = $(check_PROGRAMS)

dr_test00_SOURCES = dr-test00.c

MOSTLYCLEANFILES=
