
#AUTOMAKE_OPTIONS = foreign

dist_doc_DATA = dkim.html \
	dkim_add_querymethod.html \
	dkim_add_xtag.html \
	dkim_alg_t.html \
	dkim_atps_check.html \
	dkim_atps_t.html \
	dkim_body.html \
	dkim_canon_t.html \
	dkim_cbstat.html \
	dkim_chunk.html \
	dkim_close.html \
	dkim_dns_close.html \
	dkim_dns_config.html \
	dkim_dns_init.html \
	dkim_dns_nslist.html \
	dkim_dns_set_close.html \
	dkim_dns_set_config.html \
	dkim_dns_set_init.html \
	dkim_dns_set_nslist.html \
	dkim_dns_set_query_cancel.html \
	dkim_dns_set_query_service.html \
	dkim_dns_set_query_start.html \
	dkim_dns_set_query_waitreply.html \
	dkim_dns_set_trustanchor.html \
	dkim_dns_trustanchor.html \
	dkim_dnssec.html \
	dkim_eoh.html \
	dkim_eom.html \
	dkim_flush_cache.html \
	dkim_free.html \
	dkim_get_signer.html \
	dkim_get_sigsubstring.html \
	dkim_get_user_context.html \
	dkim_getcachestats.html \
	dkim_getdomain.html \
	dkim_geterror.html \
	dkim_getid.html \
	dkim_getmode.html \
	dkim_getresultstr.html \
	dkim_getsighdr.html \
	dkim_getsighdr_d.html \
	dkim_getsiglist.html \
	dkim_getsignature.html \
	dkim_getsslbuf.html \
	dkim_getuser.html \
	dkim_header.html \
	dkim_init.html \
	dkim_key_syntax.html \
	dkim_lib.html \
	dkim_libfeature.html \
	dkim_libversion.html \
	dkim_minbody.html \
	dkim_ohdrs.html \
	dkim_options.html \
	dkim_param_t.html \
	dkim_privkey_load.html \
	dkim_qi_getname.html \
	dkim_qi_gettype.html \
	dkim_query_t.html \
	dkim_queryinfo.html \
	dkim_resign.html \
	dkim_set_dns_callback.html \
	dkim_set_final.html \
	dkim_set_key_lookup.html \
	dkim_set_margin.html \
	dkim_set_prescreen.html \
	dkim_set_signature_handle.html \
	dkim_set_signature_handle_free.html \
	dkim_set_signature_tagvalues.html \
	dkim_set_signer.html \
	dkim_set_trust_anchor.html \
	dkim_set_user_context.html \
	dkim_sig_getbh.html \
	dkim_sig_getcanonlen.html \
	dkim_sig_getcontext.html \
	dkim_sig_getdnssec.html \
	dkim_sig_getdomain.html \
	dkim_sig_geterror.html \
	dkim_sig_geterrorstr.html \
	dkim_sig_getflags.html \
	dkim_sig_gethashes.html \
	dkim_sig_getkeysize.html \
	dkim_sig_getqueries.html \
	dkim_sig_getreportinfo.html \
	dkim_sig_getselector.html \
	dkim_sig_getsignalg.html \
	dkim_sig_getsignedhdrs.html \
	dkim_sig_getsigntime.html \
	dkim_sig_getsslbuf.html \
	dkim_sig_gettagvalue.html \
	dkim_sig_hdrsigned.html \
	dkim_sig_ignore.html \
	dkim_sig_process.html \
	dkim_sig_seterror.html \
	dkim_sig_syntax.html \
	dkim_sigerror.html \
	dkim_siginfo.html \
	dkim_sigkey_t.html \
	dkim_sign.html \
	dkim_signhdrs.html \
	dkim_ssl_version.html \
	dkim_stat.html \
	dkim_verify.html \
	index.html \
	overview.html \
	dkim_mail_parse.html \
	dkim_diffheaders.html \
	dkim_get_msgdate.html \
	dkim_getpartial.html \
	dkim_get_reputation.html \
	dkim_setpartial.html \
	dkim_sig_getidentity.html \
	dkim_sig_getcanons.html \
	dkim_libfeature.html \
	dns.html
