# $Id: Makefile.am,v 1.12 2010/06/24 14:49:42 grooverdan Exp $

check_SCRIPTS = t-sign-ss t-sign-rs t-sign-rs-tables t-sign-rs-tables-bad t-sign-rs-multiple \
	t-sign-rs-mixconf t-sign-rs-lua t-verify-revoked t-verify-unsigned \
	t-dontsign t-sign-ss-all

TESTS = $(check_SCRIPTS)

EXTRA_DIST = \
	t-sign-rs t-sign-rs.conf t-sign-rs.lua \
	t-sign-rs-lua t-sign-rs-lua.conf t-sign-rs-lua.keys \
		t-sign-rs-lua.lua t-sign-rs-lua.lua-setup t-sign-rs-lua.sign \
	t-sign-rs-mixconf t-sign-rs-mixconf.keys t-sign-rs-mixconf.conf \
		t-sign-rs-mixconf.lua t-sign-rs-mixconf.lua-setup \
	t-sign-rs-multiple t-sign-rs-multiple.conf t-sign-rs-multiple.keys \
		t-sign-rs-multiple.lua t-sign-rs-multiple.sign \
	t-sign-rs-tables t-sign-rs-tables.conf t-sign-rs-tables.keys \
		t-sign-rs-tables.lua t-sign-rs-tables.sign \
	t-sign-rs-tables-bad t-sign-rs-tables-bad.conf t-sign-rs-tables-bad.keys \
		t-sign-rs-tables-bad.lua \
	t-sign-ss t-sign-ss.conf t-sign-ss.lua \
	t-sign-ss-all t-sign-ss-all.conf t-sign-ss-all.lua \
	t-verify-revoked t-verify-revoked.conf t-verify-revoked.lua \
	t-verify-unsigned t-verify-unsigned.conf t-verify-unsigned.lua \
	t-dontsign t-dontsign.conf t-dontsign.lua \
	testkey.private pubkeys
